Updateadmin module and added negotiation feature